feat(API): status summary API (#338)
